--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
+    "prop-types": "^15.8.1",
     "yarn": "^1.22.21"
   },
   "devDependencies": {
