--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.0",
+    "react-toastify": "^9.1.3",
     "redux-persist": "^6.0.0",
     "rollup-plugin-node-polyfills": "^0.2.1",
     "tailwindcss": "^3.3.6"
