--- a/backend/package.json
+++ b/backend/package.json
@@ -12,11 +12,16 @@
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "docxtemplater": "^3.42.6",
+    "docxtemplater-image-module": "^3.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
+    "mammoth": "^1.6.0",
     "mongoose": "^8.0.3",
+    "office-js": "^0.1.0",
+    "pizzip": "^3.1.4",
     "prop-types": "^15.8.1",
     "yarn": "^1.22.21"
   },
