--- a/backend/package.json
+++ b/backend/package.json
@@ -17,9 +17,11 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "iconv-lite": "^0.6.3",
     "jsonwebtoken": "^9.0.2",
     "mammoth": "^1.6.0",
     "mongoose": "^8.0.3",
+    "node-html-parser": "^6.1.11",
     "office-js": "^0.1.0",
     "pizzip": "^3.1.4",
     "prop-types": "^15.8.1",
