--- a/backend/package.json
+++ b/backend/package.json
@@ -18,9 +18,9 @@
     "file-type": "^18.7.0",
     "fuse": "^0.9.1",
     "gridfs-stream": "^1.1.1",
-    "inkscape": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
     "jszip": "3.1.0",
+    "libwmf": "^0.1.1",
     "mammoth": "1.5.0",
     "mongodb": "5.9.1",
     "mongoose": "7.1.0",
