--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,14 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.6.2",
+    "@pdftron/webviewer": "^10.7.3",
     "@reduxjs/toolkit": "^2.0.1",
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.2",
     "copy-to-clipboard": "^3.3.3",
     "docx": "^8.5.0",
     "i": "^0.3.7",
+    "openai": "^4.28.4",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
