--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^5.0.2",
     "nodemailer": "^6.9.8",
+    "openai": "^4.29.1",
     "sharp": "^0.33.1",
     "yarn": "^1.22.21"
   },
